--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
                 <input type="search" id="search-box" placeholder="Search">
             </form>
    </header>
-   <!---MENU--->
-
-        <!-- END OF MENU -->
 
 		<div id="gradient" style="background: -webkit-gradient(linear, 0% 0%, 100% 0%, from(rgb(21, 35, 43)), to(rgb(95, 182, 186)));">
     </div>
@@ -61,7 +58,7 @@
                 </ul>
             </div>
 
-            <a href="https://jordan141.github.io" id="bottom-arrow" class="banner-bounce animate-slow" style="opacity: 1;"></a>
+            <a id="bottom-arrow" class="banner-bounce animate-slow" style="opacity: 1;"></a>
         <canvas width="1903" height="935" style="width: 100%; height: 100%;"></canvas>
         <canvas style="width: 100%; height: 100%;"></canvas>
       </div>
@@ -198,6 +195,11 @@
         </script>
         <script src="./js/jquery-migrate-1.2.1.js"></script>
 		<script>
+    $("#bottom-arrow").click(function(){
+      $('html,body').animate({
+     scrollTop: $("#about").offset().top},
+     'slow');
+});
             $(document).ready(function () {
 
                     particlesJS('full-screen', {
