--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               </li>
           </ul>
           <ul class="social-list">
-            <li><a href="https://twitter.com/" target="_blank"><i class="icon-twitter"></i></a></li>
+            <li><a href="https://twitter.com/JordanMoss52" target="_blank"><i class="icon-twitter"></i></a></li>
                 <li><a href="https://github.com/Jordan141" target="_blank"><i class="icon-facebook"></i></a></li>
             <li><a href="https://www.linkedin.com//in/jmoss41" target="_blank"><i class="icon-linkedin"></i></a></li>
           </ul>
