--- a/index.html
+++ b/index.html
@@ -70,9 +70,13 @@
 
 					         <h2>Young software developer postgraduate with a passion to learn</h2>
                         <p>
-                          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+                          Skilled in the powerful development languages of Java and .NET, honed during my time leading the development team of Keybound Web Development. After working with local businesses across County Down, our team delivered many solutions to the requests of our various clientele.                        </p>
+                        <p>
+                          Post University, I dedicated myself to completing projects I believed were out of my reach, in order to expand my ability to logically deduce a functional solution for a problem, as well as to boost my ambitions as a software developer. The project I am proudest of completing during this time, would be my own Neural Network AI, with full back propagation and error checking. This is written in C# .NET.
                         </p>
-                        <p> "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+                        <p>
+                          Currently undertaking a Nanodegree in Android Development, as well as FreeCodeCamp’s Full Stack Web Developer certificate, I am open to any queries you may have regarding possible employment or consultation. 
+                        </p>
                     </div>
                 </div>
 		              <div class="row">
@@ -159,7 +163,7 @@
 			<a id="request-callback">
           <h3>
             <span class="hide">Currently seeking new roles, got an offer?</span>
-            <span class="hover">Send us an email</span>
+            <span class="hover">Send me an email</span>
           </h3>
       </a>
 			<footer>
