--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
                 <div class="row">
                     <div class="medium-8 medium-offset-2 columns">
 
-					         <h2>Young software developer postgraduate with a passion to learn</h2>
+					         <h2>Young software developer with a passion to learn</h2>
                         <p>
                           Skilled in the powerful development languages of Java and .NET, honed during my time leading the development team of Keybound Web Development. After working with local businesses across County Down, our team delivered many solutions to the requests of our various clientele.                        </p>
                         <p>
                           Post University, I dedicated myself to completing projects I believed were out of my reach, in order to expand my ability to logically deduce a functional solution for a problem, as well as to boost my ambitions as a software developer. The project I am proudest of completing during this time, would be my own Neural Network AI, with full back propagation and error checking. This is written in C# .NET.
                         </p>
                         <p>
-                          Currently undertaking a Nanodegree in Android Development, as well as FreeCodeCamp’s Full Stack Web Developer certificate, I am open to any queries you may have regarding possible employment or consultation. 
+                          Currently undertaking a Nanodegree in Android Development, as well as FreeCodeCamp’s Full Stack Web Developer certificate, I am open to any queries you may have regarding possible employment or consultation.
                         </p>
                     </div>
                 </div>
